first working version

--- a/index.html
+++ b/index.html
@@ -19,42 +19,9 @@
 </head>
 
 <body>
-  <div id="container" class="container-fluid">
-
-    <!-- Oil Row -->
-    <div class="row oil">
-      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 ">
-        <h1>Oil <small>per barrel</small></h1>
         <h2>
-            <span id="oil-price" class="price"></span>
-            <small id="oil-change" class="change"></small>
-          </h2>
-      </div>
-    </div>
-
-    <!-- Gold Row -->
-    <div class="row gold">
-      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-        <h1>Gold <small>per ounce</small></h1>
-        <h2>
-            <span id="gold-price" class="price"></span>
-            <small id="gold-change" class="change"></small>
-          </h2>
-      </div>
-    </div>
-
-    <!-- Silver Row -->
-    <div class="row silver">
-      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-        <h1 class="silver">Silver <small>per ounce</small></h1>
-        <h2>
-            <span id="silver-price" class="price"></span>
-            <small id="silver-change" class="change"></small>
-          </h2>
-      </div>
-    </div>
-
-  </div>
+           <span id="message" class="price"></span>
+        </h2>
 </body>
 
 </html>
